k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: education-platform
  labels:
    app: education-platform
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: education-platform
  template:
    metadata:
      labels:
        app: education-platform
    spec:
      containers:
        - name: education-platform
          image: 035699610728.dkr.ecr.us-east-1.amazonaws.com/education-platform:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
